// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $5.00
  </h1>
</div>
`;

exports[`it should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $15.00
  </h1>
</div>
`;
